--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ async-timeout==4.0.3
 attrs==23.2.0
 beautifulsoup4==4.12.3
 bleach==6.1.0
+blinker==1.4
 bokeh==2.0.1
 certifi==2024.2.2
 cffi==1.16.0
@@ -16,13 +17,18 @@ charset-normalizer==3.3.2
 click==8.1.7
 collection==0.1.6
 comm==0.2.2
+command-not-found==0.3
 contourpy==1.2.0
+cryptography==3.4.8
 cycler==0.12.1
 datasets==2.16.1
+dbus-python==1.2.18
 debugpy==1.8.1
 decorator==5.1.1
 defusedxml==0.7.1
 dill==0.3.7
+distro==1.7.0
+distro-info==1.1+ubuntu0.1
 entrypoints==0.4
 exceptiongroup==1.2.0
 executing==2.0.1
@@ -33,13 +39,16 @@ fqdn==1.5.1
 frozenlist==1.4.1
 fsspec==2023.10.0
 graphviz==0.8.4
+httplib2==0.20.2
 huggingface-hub==0.22.2
 idna==3.6
+importlib-metadata==4.6.4
 ipykernel==6.29.4
 ipython==8.23.0
 ipython-genutils==0.2.0
 isoduration==20.11.0
 jedi==0.19.1
+jeepney==0.7.1
 Jinja2==3.1.3
 joblib==1.3.2
 jsonpointer==2.4
@@ -51,11 +60,17 @@ jupyter_core==5.7.2
 jupyter_server==2.13.0
 jupyter_server_terminals==0.5.3
 jupyterlab_pygments==0.3.0
+keyring==23.5.0
 kiwisolver==1.4.5
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
+lit==18.1.8
 MarkupSafe==2.1.5
 matplotlib==3.8.2
 matplotlib-inline==0.1.6
 mistune==3.0.2
+more-itertools==8.10.0
 mpmath==1.3.0
 multidict==6.0.5
 multiprocess==0.70.15
@@ -65,6 +80,7 @@ nbclient==0.10.0
 nbconvert==7.16.3
 nbformat==5.10.3
 nest-asyncio==1.6.0
+netifaces==0.11.0
 networkx==3.2.1
 nltk==3.8.1
 notebook==6.5.6
@@ -82,6 +98,7 @@ nvidia-cusparse-cu12==12.1.0.106
 nvidia-nccl-cu12==2.19.3
 nvidia-nvjitlink-cu12==12.4.99
 nvidia-nvtx-cu12==12.1.105
+oauthlib==3.2.0
 overrides==7.7.0
 packaging==24.0
 pandas==2.1.4
@@ -99,7 +116,10 @@ pyarrow==15.0.0
 pyarrow-hotfix==0.6
 pycparser==2.22
 Pygments==2.17.2
+PyGObject==3.42.1
+PyJWT==2.3.0
 pyparsing==3.1.2
+python-apt==2.4.0+ubuntu2
 python-dateutil==2.9.0.post0
 python-json-logger==2.0.7
 pytz==2024.1
@@ -114,12 +134,14 @@ rpds-py==0.18.0
 scikit-learn==1.4.0
 scipy==1.11.4
 seaborn==0.13.1
+SecretStorage==3.3.1
 Send2Trash==1.8.2
 six==1.16.0
 sniffio==1.3.1
 soupsieve==2.5
 stack-data==0.6.3
 sympy==1.12
+systemd-python==234
 terminado==0.18.1
 threadpoolctl==3.4.0
 tinycss2==1.2.1
@@ -132,8 +154,12 @@ triton==2.2.0
 types-python-dateutil==2.9.0.20240316
 typing_extensions==4.10.0
 tzdata==2024.1
+ubuntu-advantage-tools==8001
+ufw==0.36.1
+unattended-upgrades==0.1
 uri-template==1.3.0
 urllib3==1.26.18
+wadllib==1.3.6
 wcwidth==0.2.13
 webcolors==1.13
 webencodings==0.5.1
@@ -141,3 +167,4 @@ websocket-client==1.7.0
 xgboost==2.0.3
 xxhash==3.4.1
 yarl==1.9.4
+zipp==1.0.0
