--- a/environment.yaml
+++ b/environment.yaml
@@ -22,7 +22,7 @@ dependencies:
   - tk=8.6.14=h39e8969_0
   - tzdata=2024a=h04d1e81_0
   - wheel=0.43.0=py312h06a4308_0
-  - xz=5.4.6=h5eee18b_1
+  - xz=5.4.6=h5eee18b_1cond
   - zlib=1.2.13=h5eee18b_1
   - pip:
       - defusedxml==0.7.1
